mendix-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mendix-app-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: mendix-k8s
  type: NodePort
