mendix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mendix-service
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: mendix-k8s
