mendix-app.yaml
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: mendix-app-stateful
  labels:
    app: mendix-app
spec:
  serviceName: mendix-app-ss
  replicas: 2
  selector:
    matchLabels:
      app: mendix-k8s
  template:
    metadata:
      labels:
        app: mendix-app
    spec:
      containers:
        - name: mendix-app
          image: docker-registry.default.svc:5000/mendix-on-openshift/openshift-mendix:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /build/data/files
              name: mendix-data
          livenessProbe:
              httpGet:
                  path: /
                  port: 80
              initialDelaySeconds: 15
              periodSeconds: 20
  volumeClaimTemplates:
  - metadata:
      name: mendix-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: glusterfs-storage
      resources:
        requests:
          storage: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mendix-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
     protocol: TCP
  selector:
    app: mendix-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mendix-app-route
spec:
  host: mendix.ocp.hcs-company.com
  tls:
    termination: edge
  to:
    kind: Service
    name: mendix-service
    weight: 100
  wildcardPolicy: None
